<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.nav.home.HomeFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_home_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/welcomeCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/home"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="18dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/textWelcomeHome"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:lineSpacingExtra="1dp"
                android:text="@string/subTextWelcomeHome"
                android:textColor="@color/black"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_weight=".4"
            android:src="@drawable/dokter" />
    </LinearLayout>

    <TextView
        android:id="@+id/titleKalori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/titleKalori"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/welcomeCard" />

    <LinearLayout
        android:id="@+id/menu_horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"
        android:background="@color/green900"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleKalori">

        <androidx.cardview.widget.CardView
            android:id="@+id/cek_berat"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/beratBadan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/beratBadan"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:gravity="center"
                    android:text="@string/titleBeratBadan"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cek_tinggi"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tinggiBadan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/tinggiBadan"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:gravity="center"
                    android:text="@string/titleTinggiBadan"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cekUmur"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/umur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/umur"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/titleUmur"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/kebetuhanKalori"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="9dp">

                <TextView
                    android:id="@+id/cekKebutuhan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/cekKebutuhan"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/titleCekKebutuhan"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/titleCalculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/Titlebmr_calculator"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/menu_horizontal" />

    <LinearLayout
        android:id="@+id/BmrCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/bgmbr"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCalculator">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:paddingStart="5dp"
            android:layout_gravity="center"
            android:layout_weight=".35"
            android:src="@drawable/kalkulator" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:elevation="18dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/textCalculator"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:lineSpacingExtra="1dp"
                android:text="@string/subTextCalculator"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:backgroundTint="@color/kuning"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/cek"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>